fix: make children required and moving the alignement scss in the globals folder

--- a/src/components/DataTable/cells/TableCell.scss
+++ b/src/components/DataTable/cells/TableCell.scss
@@ -18,15 +18,3 @@
         background-color: var(--color-gray_light);
     }
 }
-
-.moonstone-verticalAlignTop {
-    vertical-align: top;
-}
-
-.moonstone-verticalAlignMiddle {
-    vertical-align: middle;
-}
-
-.moonstone-verticalAlignBottom {
-    vertical-align: bottom;
-}
